syntax = "proto3";

package intr.v1;
option go_package="intr/v1;intrv1";
service InteractiveService {
    rpc IncrReadCnt(IncrReadCntRequest) returns(IncrReadCntResponse);
    rpc Like(LikeRequest) returns(LikeResponse);
    rpc CancelLike(CancelLikeRequest)returns(CancelLikeResponse);
    rpc Collect(CollectRequest) returns(CollectResponse);
    rpc Get(GetRequest)returns (GetResponse);
    rpc GetByIds(GetByIdsRequest) returns(GetByIdsResponse);
}
message IncrReadCntRequest {
  string biz = 1;
  int64 biz_id=2;
}
message IncrReadCntResponse {

}
message LikeRequest{
  string biz = 1;
  int64 biz_id=2;
  int64 uid = 3;
}
message LikeResponse{

}
message CancelLikeRequest{
  string biz = 1;
  int64 biz_id=2;
  int64 uid = 3;
}
message CancelLikeResponse{

}
message CollectRequest{
  string biz = 1;
  int64 biz_id=2;
  int64 uid = 3;
  int64 cid = 4;
}
message CollectResponse{

}
message GetRequest{
  string biz = 1;
  int64 biz_id=2;
  int64 uid = 3;
}
message GetResponse{
    Interactive intr =1;
}
message GetByIdsRequest{
  string biz = 1;
  repeated int64  biz_ids = 2;
}
message GetByIdsResponse{
map<int64,Interactive> intr =1;
}
message Interactive{
  string Biz = 1;
  int64  BizId =2;
  int64 ReadCnt     =3;
  int64 LikeCnt   =4;
  int64 CollectCnt =5;
  bool Liked     =6;
  bool Collected = 7;
}